# gpt-oss-hackathon

./: README.md
backend/: .gitignore  config.example.py  config.py  main.py  pyproject.toml  test.py
backend/notes/: resources.py  tools.py  updater.py
backend/practice/: models.py  updater.py
chrome-extension/: background.js  manifest.json
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BrowsePage.tsx  NotesWorkspace.tsx  SpacedRepetitionPage.tsx
frontend/src/hooks/: useLocalStorage.ts
