[project]
name = "goose-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "fastapi[standard]>=0.116.1",
    "openai>=1.102.0",
    "openai-agents[litellm]>=0.2.10",
    "pydantic>=2.11.7",
]
